# git_statistics

./: .gitignore  LICENSE  config.py  config_sample.yaml  config_schema.py  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py
app/api/: api_bp.py
app/schema/: api_schema.py  config_schema.py
app/utility/: deliverer.py  logger.py  time_manager.py
deployment/nginx/: nginx.conf
