[tool.poetry]
name = "git-statistics"
version = "0.1.0"
description = "A simple tool to get statistics of a git repository."
authors = ["AI-Earl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.23"
apiflask = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
